--- a/layouts/partials/home.html
+++ b/layouts/partials/home.html
@@ -1,13 +1,51 @@
 <section class="container centered">
   <div class="about">
-    <h1>{{ .Site.Params.author }}</h1>
-    <h2>{{ .Site.Params.info }}</h2>
-    {{ with .Site.Params.social }}
-    <ul>
-      {{ range sort .}}
-      <li><a href="{{ .url }}">{{ .name }}</a></li>
-      {{ end }}
-    </ul>
-    {{ end }}
+    <table class="tbl">
+<tr>
+<th style="width: 100px;">商号</th>
+<td>株式会社シモキタコイン</td>
+</tr>
+<tr>
+<th>商号（英文名）</th>
+<td>Shimokita Coin, Inc.</td>
+</tr>
+<tr>
+<th>設立年月日</th>
+<td>2018年（平成30年）3月26日</td>
+</tr>
+<tr>
+<th>本店所在地</th>
+<td>
+東京都港区赤坂二丁目9番11号　オリックス赤坂2丁目ビル 10階<br>
+電話：03-4500-9850　FAX：03-3585-0620
+</td>
+</tr>
+<tr>
+<th>親会社</th>
+<td>
+株式会社エルコイン
+</td>
+</tr>
+<tr>
+<th>代表者</th>
+<td>代表取締役社長　鎌形渉</td>
+</tr>
+<tr>
+<th>資本金</th>
+<td>10,000千円（2018年3月末現在）</td>
+</tr>
+<tr>
+<th>発行済株式総数</th>
+<td>1,000株（2018年3月末現在）</td>
+</tr>
+<tr>
+<th>営業年度</th>
+<td>３月１日から２月末日</td>
+</tr>
+<tr>
+<th>事業内容</th>
+<td>電子地域通貨事業</td>
+</tr>
+</table>
   </div>
 </section>
