--- a/layouts/partials/home.html
+++ b/layouts/partials/home.html
@@ -1,5 +1,8 @@
-<section class="container centered">
-  <div class="about">
+
+
+
+<section class="contentsWrapper">
+  <div class="leftBox">
     <table class="tbl">
 <tr>
 <th style="width: 100px;">商号</th>
