--- a/themes/theme/layouts/index.html
+++ b/themes/theme/layouts/index.html
@@ -1,52 +1,59 @@
 <!DOCTYPE html>
 <html>
-    <head>
+<head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title></title>
 <link rel="stylesheet" href="{{ .Site.BaseURL }}css/main.css" media="all">
 <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Merriweather:400|Lato:400,400italic,700">
 <link rel="stylesheet" href="//fonts.googleapis.com/earlyaccess/notosansjapanese.css">
- <link rel="shortcut icon" href="{{ .Site.BaseURL }}images/favicon.ico" type="image/x-icon" />
-    </head>
-    <body>
-<tr class="row-1">
-	<td class="column-1" style="width:15%;">会社名</td><td class="column-2" style="width:85%;">会社名：株式会社シモキタコイン（英文社名：Shimokita Coin, Inc.）</td>
+<link rel="shortcut icon" href="{{ .Site.BaseURL }}images/favicon.ico" type="image/x-icon" />
+</head>
+<body>
+<div class="container content-sm padding-top-60">
+<table class="table">
+<tbody>
+<tr>
+<td>会社名</td>
+<td>株式会社シモキタコイン（英文社名：Shimokita Coin, Inc.）</td>
 </tr>
-<tr class="row-2">
-	<td class="column-1">所在地</td><td class="column-2">〒155-0031 <br />
-東京都世田谷区北沢2丁目10番15号<br />
-藤和下北沢ハイタウンA棟303<br />
-TEL： 03-4500-9850</td>
+<tr>
+<td>所在地</td>
+<td>〒155-0031 東京都世田谷区北沢2丁目10番15号 藤和下北沢ハイタウンA棟303</td>
 </tr>
-<tr class="row-3">
-	<td class="column-1">設立年月日</td><td class="column-2">2018年3月26日</td>
+<tr>
+<td>電話番号</td>
+<td>03-4500-9850</td>
 </tr>
-<tr class="row-4">
-	<td class="column-1">資本金</td><td class="column-2">500万円（資本準備金：500万円）</td>
+<tr>
+<td>設立年月日</td>
+<td>2018年3月26日</td>
 </tr>
-<tr class="row-5">
-	<td class="column-1">株主</td><td class="column-2">株式会社エルコイン（100%保有）</td>
+<tr>
+<td>資本金</td>
+<td>500万円（資本準備金：500万円）</td>
 </tr>
-<tr class="row-6">
-	<td class="column-1">役員</td><td class="column-2">代表取締役社長　鎌形 渉<br />
+<tr>
+<td>株主</td>
+<td>株式会社エルコイン（100%保有）</td>
+</tr>
+<tr>
+<td>役員</td>
+<td>代表取締役社長　鎌形 渉<br />
 取締役　西山 友則（株式会社アイラブ 代表取締役社長）<br />
 取締役　佐谷 宣昭（パイプドHD株式会社 代表取締役社長 グループCEO）<br />
 監査役　大屋 重幸（パイプドHD株式会社 取締役 グループCFO）</td>
 </tr>
-<tr class="row-7">
-	<td class="column-1">事業年度</td><td class="column-2">3月1日から2月末日</td>
+<tr>
+<td>事業年度</td>
+<td>3月1日から2月末日</td>
 </tr>
-<tr class="row-8">
-	<td class="column-1">事業内容</td><td class="column-2">下北沢エリアの電子地域通貨事業</td>
+<tr>
+<td>事業内容</td>
+<td>下北沢エリアの電子地域通貨事業</td>
 </tr>
-<tr class="row-9">
-	<td class="column-1"></td><td class="column-2"></td>
-</tr>
-
-
-
-
-
-    </body>
+</tbody>
+</table>
+</div>
+</body>
 </html>
