--- a/themes/theme/static/css/main.css
+++ b/themes/theme/static/css/main.css
@@ -1,8 +1,7 @@
 html,
-body {
-  margin: 0;
-  padding: 0;
-  position: relative;
+
+* {
+	border-radius: 0;
 }
 
 body {
@@ -11,317 +10,11 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -moz-font-feature-settings: "liga" on;
-}
-
-hr {
-  border:none;
-  border-top:solid 1px #CCC;
-  height:1px;
-  color:#e5e5e5;
-  margin: 0 6 0 6;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: 'Lato', sans-serif;
-  color: #000000;
-}
-
-a {
-  outline: none;
-}
-
-.wrapper {
-  overflow: hidden;
+  margin: 0;
+  padding: 0;
   position: relative;
+  line-height: 1.6;
 }
 
-.header {
-  padding: 20px 0;
-  position: relative;
-  background: #ed6d00;
-  border-bottom: 1px solid #eaeaea;
-}
 
-.nav {
-  max-width: 800px;
-  margin: 0 auto;
-  padding: 0 15px;
-  font-family: 'Lato', sans-serif;
-  text-align: right;
-  color: #ffffff;
-}
 
-.nav-logo {
-  float: left;
-  margin-top: -11px;
-  transition: transform 150ms ease-out;
-}
-
-.nav-logo:hover {
-  transform: scale(1.06);
-}
-
-.nav-logo img {
-  display: block;
-  max-height: 40px;
-  width: auto;
-}
-
-.nav-links {
-  margin: 0;
-  padding: 0;
-  font-size: 12px;
-  color: #ffffff;
-  list-style: none;
-}
-
-.nav-links li {
-  display: inline-block;
-  margin: 0 0 0 12px;
-  color: #ffffff;
-}
-
-.nav-links li:first-child {
-  margin-left: 0;
-  color: #ffffff;
-}
-
-.nav-links a {
-  text-decoration: none;
-  color: #ffffff;
-}
-
-.nav-links a:hover {
-  color: #ffffff;
-  font-weight: bold;
-}
-
-.content {
-  max-width: 700px;
-  margin: 60px auto 80px;
-  padding: 0 15px 15px 15px;
-  font-size: 12px;
-  line-height: 1.7;
-  color: #000000;
-}
-
-.article-title {
-  font-size: 32px;
-  color: #000000;
-  margin: 0;
-  line-height: 1.3;
-}
-
-.article-date {
-  color: #2E2E2E;
-}
-
-.article-content p {
-  margin: 15px 0 25px;
-}
-
-.article-content a {
-  text-decoration: none;
-  color: inherit;
-  border-bottom: 1px solid #CBF8DF;
-  box-shadow: inset 0 -2px 0 #CBF8DF;
-  background: transparent;
-  transition: background 150ms ease;
-}
-
-.article-content a:hover,
-.article-content a:focus {
-  background: #CBF8DF;
-}
-
-.article-content hr {
-  width: 150px;
-  margin: 50px auto;
-  height: 1px;
-  overflow: hidden;
-  border: none;
-  background: #e5e5e5;
-}
-
-.highlight {
-  border-radius: 3px;
-  position: relative;
-  margin: 40px 0;
-  font-size: 10px;
-}
-
-.highlight pre {
-  padding: 10px;
-}
-
-.news {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  line-height: 1.3em;
-  color: #000000;
-}
-
-.news-title {
-  font-size: 28px;
-  margin-top: 60px;
-}
-
-.news-item {
-  margin: 5px 0 15px;
-  padding: 0;
-}
-
-.news-item-date {
-  color: #2E2E2E;
-  font-size: 10px;
-  padding: 5px 5px 0 0;
-  margin-top: 5px;
-  display: block;
-}
-
-.news-item-link {
-  display: inline-block;
-  text-decoration: none;
-  font-size: 14px;
-  font-family: 'Lato', sans-serif;
-  font-weight: bold;
-  color: #2E2E2E;
-  padding: 5px 0;
-  border-bottom: 1px solid #ddd;
-}
-
-.news-item-link:hover {
-  border-bottom-color: #2E2E2E;
-}
-
-.footer {
-  padding: 5px 15px;
-  text-align: center;
-  font-family: 'Lato', sans-serif;
-}
-
-.footer-notes {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  color: #2E2E2E;
-  font-size: 12px;
-}
-
-.footer-notes li {
-  margin: 0;
-  padding: 0;
-  display: inline-block;
-}
-
-.footer-notes li::before {
-  content: '/';
-  position: relative;
-  left: -2px;
-}
-
-.footer-links {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  color: #ccc;
-  font-size: 14px;
-}
-
-.footer-links li {
-  margin: 0;
-  padding: 0;
-  display: inline-block;
-}
-
-.footer-links a {
-  color: #888;
-  text-decoration: none;
-  transition: color 150ms ease;
-  margin: 0 15px;
-}
-
-.footer-links a:hover,
-.footer-links a:focus {
-  color: #222;
-}
-
-.footer-links li::before {
-  content: '/';
-  position: relative;
-  left: -2px;
-}
-
-.footer-links li:first-child::before {
-  display: none;
-}
-.footer-links-kudos img {
-  position: relative;
-  top: 6px;
-  margin-left: 2px;
-}
-
-@media (min-width: 600px) {
-  .header {
-    padding: 25px 0;
-  }
-
-  .nav-logo {
-    margin-top: -13px;
-  }
-
-  .nav-logo img {
-    max-height: 50px;
-  }
-
-  .nav-links {
-    font-size: 14px;
-  }
-
-  .nav-links li {
-    margin: 0 0 0 30px;
-  }
-
-  .content {
-    font-size: 14px;
-    line-height: 1.8;
-    margin: 100px auto;
-  }
-
-  .highlight {
-    font-size: 12px;
-    margin: 40px -20px;
-  }
-
-  .news {
-    text-align: left;
-  }
-
-  .news-title {
-    font-size: 28px;
-  }
-
-  .news-item-date {
-    font-size: 15px;
-    text-align: left;
-
-  }
-
-  .article-title {
-    font-size: 28px;
-  }
-
-  .article-duration {
-    font-size: 10px;
-  }
-
-  .footer-links {
-    font-size: inherit;
-  }
-}
