--- a/themes/theme/layouts/index.html
+++ b/themes/theme/layouts/index.html
@@ -10,7 +10,7 @@
 <link rel="shortcut icon" href="{{ .Site.BaseURL }}images/favicon.ico" type="image/x-icon" />
 </head>
 <body>
-<div class="container content-sm padding-top-60">
+<div class="center">
 <table class="table">
 <tbody>
 <tr>
