--- a/themes/theme/layouts/index.html
+++ b/themes/theme/layouts/index.html
@@ -5,52 +5,50 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title></title>
 <link rel="stylesheet" href="{{ .Site.BaseURL }}css/main.css" media="all">
-<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Merriweather:400|Lato:400,400italic,700">
-<link rel="stylesheet" href="//fonts.googleapis.com/earlyaccess/notosansjapanese.css">
 <link rel="shortcut icon" href="{{ .Site.BaseURL }}images/favicon.ico" type="image/x-icon" />
 </head>
 <body>
-<div class="center">
-<table class="table">
+<div>
+<table>
 <tbody>
 <tr>
 <td>会社名</td>
-<td>株式会社シモキタコイン（英文社名：Shimokita Coin, Inc.）</td>
+<td>会社名会社名会社名会社名会社名会社名</td>
 </tr>
 <tr>
 <td>所在地</td>
-<td>〒155-0031 東京都世田谷区北沢2丁目10番15号 藤和下北沢ハイタウンA棟303</td>
+<td>所在地所在地所在地所在地所在地所在地所在地所在地所在地所在地所在地所在地</td>
 </tr>
 <tr>
 <td>電話番号</td>
-<td>03-4500-9850</td>
+<td>03-****-****</td>
 </tr>
 <tr>
 <td>設立年月日</td>
-<td>2018年3月26日</td>
+<td>****年**月**日</td>
 </tr>
 <tr>
 <td>資本金</td>
-<td>500万円（資本準備金：500万円）</td>
+<td>****万円</td>
 </tr>
 <tr>
 <td>株主</td>
-<td>株式会社エルコイン（100%保有）</td>
+<td>株主株主株主（100%保有）</td>
 </tr>
 <tr>
 <td>役員</td>
-<td>代表取締役社長　鎌形 渉<br />
-取締役　西山 友則（株式会社アイラブ 代表取締役社長）<br />
-取締役　佐谷 宣昭（パイプドHD株式会社 代表取締役社長 グループCEO）<br />
-監査役　大屋 重幸（パイプドHD株式会社 取締役 グループCFO）</td>
+<td>代表取締役社長<br />
+取締役<br />
+取締役<br />
+監査役</td>
 </tr>
 <tr>
 <td>事業年度</td>
-<td>3月1日から2月末日</td>
+<td>月日から月末日</td>
 </tr>
 <tr>
 <td>事業内容</td>
-<td>下北沢エリアの電子地域通貨事業</td>
+<td>事業内容事業内容事業内容事業内容</td>
 </tr>
 </tbody>
 </table>
