--- a/themes/theme/static/css/main.css
+++ b/themes/theme/static/css/main.css
@@ -1,7 +1,5 @@
 
-* {
 
-}
 
 body {
   font-family: 'Noto Sans Japanese', serif;
@@ -9,11 +7,13 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -moz-font-feature-settings: "liga" on;
-  margin: 0;
-  padding: 0;
-  position: relative;
+  width: 80%;
+  margin: 0 auto;
+  max-width: 500px;
   line-height: 1.6;
 }
 
-
+table {
+  border-collapse: collapse;
+}
 
