--- a/themes/theme/layouts/index.html
+++ b/themes/theme/layouts/index.html
@@ -8,7 +8,7 @@
 <link rel="shortcut icon" href="{{ .Site.BaseURL }}images/favicon.ico" type="image/x-icon" />
 </head>
 <body>
-<div id="center">
+<div class="center">
 <table>
 <tbody>
 <tr>
