--- a/themes/theme/layouts/index.html
+++ b/themes/theme/layouts/index.html
@@ -8,7 +8,8 @@
 <link rel="shortcut icon" href="{{ .Site.BaseURL }}images/favicon.ico" type="image/x-icon" />
 </head>
 <body>
-<div class="center">
+<div class="outer">
+<div class="inner">
 <table>
 <tbody>
 <tr>
@@ -52,6 +53,7 @@
 </tr>
 </tbody>
 </table>
+</div>
 </div>
 </body>
 </html>
