--- a/themes/theme/static/css/main.css
+++ b/themes/theme/static/css/main.css
@@ -15,12 +15,16 @@ table {
 
 
 .outer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  position: relative;
 }
 
 .inner{
-  display: inline-block;
-  text-align: left;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+  width: 80%;
+  height: 3.2rem;
 }
