--- a/themes/theme/static/css/main.css
+++ b/themes/theme/static/css/main.css
@@ -15,16 +15,15 @@ table {
 
 
 .outer {
-  position: relative;
+  border: 2px solid #1b0303;
+  box-sizing: border-box;
+  width: 100%;
+  height: 300px;
 }
 
 .inner{
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  margin: auto;
-  width: 80%;
-  height: 3.2rem;
+  width: 300px;
+  height: 200px;
+  display: flex;
+  justify-content: center;
 }
