--- a/themes/theme/static/css/main.css
+++ b/themes/theme/static/css/main.css
@@ -15,15 +15,16 @@ table {
 
 
 .outer {
-  border: 2px solid #1b0303;
-  box-sizing: border-box;
-  width: 100%;
-  height: 300px;
+    width: 920px;  
+    height: 580px;  
+    position: absolute;  
+    top: 50%;  
+    left: 50%;  
+    margin: -310px 0 0 -480px;  
+    padding: 20px;  
 }
 
 .inner{
-  width: 300px;
-  height: 200px;
   display: flex;
   justify-content: center;
 }
