--- a/themes/theme/layouts/index.html
+++ b/themes/theme/layouts/index.html
@@ -10,7 +10,7 @@
 <body>
 <div class="outer">
 <div class="inner">
-<table border="1" cellspacing="0" bordercolor="#000000">
+<table>
 <tbody>
 <tr>
 <td>会社名</td>
