--- a/themes/theme/static/css/main.css
+++ b/themes/theme/static/css/main.css
@@ -12,7 +12,7 @@ body {
 table, td {
   border: 1px #000000 solid;
   border-collapse: collapse;
-  border-spacing: 5px;
+  padding: 10px 20px;
 }
 
 .outer {
