--- a/themes/theme/static/css/main.css
+++ b/themes/theme/static/css/main.css
@@ -8,34 +8,24 @@ body {
   -moz-font-feature-settings: "liga" on;
 }
 
-table {
-  width: 100%;
+table, td {
+  border: 1px #000000 solid;
+  border-collapse: collapse;
+  padding: 10px 20px;
 }
-table tr {
-  display: block;
-  float: left;
-}
-table tr td, table tr th {
-  display: block;
-  height: 40px;
-}
-table thead {
-  display: block;
-  float: left;
-  width: 30%;
-}
-table thead tr {
-  width: 100%;
-}
-table tbody {
-  display: block;
-  float: left;
-  width: 70%;
-}
-table tbody tr {
-  width: 30%;
- }
 
+.outer {
+  position: absolute;  
+  top: 50%;  
+  left: 50%;  
+  margin: -310px 0 0 -480px;  
+  padding: 20px;  
+}
+
+.inner{
+  display: flex;
+  justify-content: center;
+}
 
 
 
