--- a/themes/theme/static/css/main.css
+++ b/themes/theme/static/css/main.css
@@ -12,6 +12,9 @@ table, td {
   border: 1px #000000 solid;
   border-collapse: collapse;
   padding: 10px 20px;
+  width: 100%;
+  table-layout: fixed;
+  word-break: break-word;
 }
 
 
