--- a/themes/theme/static/css/main.css
+++ b/themes/theme/static/css/main.css
@@ -11,6 +11,9 @@ body {
 table, td {
   border: 1px #000000 solid;
   border-collapse: collapse;
+  position: absolute;
+  top: 50%;
+  left: 50%;
   padding: 10px 20px;
   word-break: break-word;
 }
