--- a/themes/theme/static/css/main.css
+++ b/themes/theme/static/css/main.css
@@ -9,16 +9,15 @@ body {
 }
 
 .outer {
-  position: absolute;
-  margin: auto; 
-  width: 100%;
-  height: 100%;
+  display: flex;
+  justify-content: center;
 }
 
 table, td {
   border: 1px #000000 solid;
   border-collapse: collapse;
   word-break: break-word;
+  padding: 10px 20px;
 }
 
 
