--- a/themes/theme/static/css/main.css
+++ b/themes/theme/static/css/main.css
@@ -9,8 +9,15 @@ body {
 }
 
 .outer {
-  display: flex;
-  justify-content: center;
+  display:-webkit-box;
+  display:-ms-flexbox;
+  display:flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 table, td {
