--- a/themes/theme/layouts/index.html
+++ b/themes/theme/layouts/index.html
@@ -8,46 +8,45 @@
 <link rel="shortcut icon" href="{{ .Site.BaseURL }}images/favicon.ico" type="image/x-icon" />
 </head>
 <body>
-<div class="outer">
+<div class="contentWrapper" id="company">
+<h2 class="title">COMPANY<br>
+<span>会社概要</span></h2>
 <table>
 <tr>
-<td>会社名</td>
-<td>会社名会社名会社名会社名会社名会社名</td>
+<th>商号</th>
+<td>株式会社　(英文社名： ）</td>
 </tr>
 <tr>
-<td>所在地</td>
-<td>所在地所在地所在地所在地所在地所在地所在地所在地所在地所在地所在地所在地</td>
+<th>設立年月日</th>
+<td>年（平成年）月 日</td>
 </tr>
 <tr>
-<td>電話番号</td>
-<td>03-****-****</td>
+<th>所在地</th>
+<td></td>
 </tr>
 <tr>
-<td>設立年月日</td>
-<td>****年**月**日</td>
+<th>役員</th>
+<td>代表取締役社長　<br>
+取締役副社長　<br>
+取締役　<br>
+取締役　<br>
+監査役　</td>
 </tr>
 <tr>
-<td>資本金</td>
-<td>****万円</td>
+<th>資本金</th>
+<td>円</td>
 </tr>
 <tr>
-<td>株主</td>
-<td>株主株主株主（100%保有）</td>
+<th>株主</th>
+<td><a href="" target="_blank">株式会社</a>（100%保有）</td>
 </tr>
 <tr>
-<td>役員</td>
-<td>代表取締役社長<br />
-取締役<br />
-取締役<br />
-監査役</td>
+<th>営業年度</th>
+<td>3月1日から2月末日</td>
 </tr>
 <tr>
-<td>事業年度</td>
-<td>月日から月末日</td>
-</tr>
-<tr>
-<td>事業内容</td>
-<td>事業内容事業内容事業内容事業内容</td>
+<th>事業内容</th>
+<td></td>
 </tr>
 </table>
 </div>
