--- a/themes/theme/static/css/main.css
+++ b/themes/theme/static/css/main.css
@@ -8,25 +8,61 @@ body {
   -moz-font-feature-settings: "liga" on;
 }
 
-.outer {
-  display:-webkit-box;
-  display:-ms-flexbox;
-  display:flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+.title{
+	font-weight:normal;
+	font-size:300%;
+	text-align:center;
+	line-height:1;
+	margin:78px 0;
+}
+.title span{
+	font-size:45%;
 }
 
-table, td {
-  border: 1px #000000 solid;
-  border-collapse: collapse;
-  word-break: break-word;
-  padding: 10px 20px;
+.contentWrapper{
+	width:1100px;
+	margin:0 auto 60px;
+	position:relative;
+	clear:both;
+}
+.contentWrapper:after{
+	content:"";
+	display:block;
+	clear:both;
+}	
+.contentWrapper p,
+.modalcontent p{
+	line-height:1.8;
 }
 
+#company table{
+	width:680px;
+	margin:0 auto;
+	border-top:1px solid #CCC;
+}	
+#company table th{
+	font-weight:normal;
+	white-space:nowrap;
+}
+#company table th,
+#company table td{
+	padding:2em;
+	border-bottom:1px solid #CCC;
+}
 
-
+@media screen and (max-width: 680px){
+	#company table{
+		width:auto;
+	}	
+	#company table th,
+	#company table td{
+		padding:2em 10px;
+	}
+	.contentWrapper{
+		width:auto;
+		margin:0 7px 60px;
+	}
+	.contentWrapper.content-top{
+		padding-top:5px;
+	}
 
