--- a/themes/theme/layouts/index.html
+++ b/themes/theme/layouts/index.html
@@ -9,44 +9,44 @@
 </head>
 <body>
 <div class="contentWrapper" id="company">
-<h2 class="title">COMPANY<br>
-<span>会社概要</span></h2>
+<h2 class="title">株式会社シモキタコイン</h2>
 <table>
 <tr>
 <th>商号</th>
-<td>株式会社　(英文社名： ）</td>
-</tr>
-<tr>
-<th>設立年月日</th>
-<td>年（平成年）月 日</td>
+<td>株式会社シモキタコイン（英文社名：Shimokita Coin, Inc.）</td>
 </tr>
 <tr>
 <th>所在地</th>
-<td></td>
+<td>〒155-0031<br>
+東京都世田谷区北沢2丁目10番15号<br>
+藤和下北沢ハイタウンA棟303</td>
 </tr>
 <tr>
-<th>役員</th>
-<td>代表取締役社長　<br>
-取締役副社長　<br>
-取締役　<br>
-取締役　<br>
-監査役　</td>
+<th>設立年月日</th>
+<td>2018年3月26日</td>
 </tr>
 <tr>
 <th>資本金</th>
-<td>円</td>
+<td>500万円（資本準備金：500万円）</td>
 </tr>
 <tr>
 <th>株主</th>
-<td><a href="" target="_blank">株式会社</a>（100%保有）</td>
+<td><a href="https://lcoin.jp/" target="_blank">株式会社エルコイン</a>（100%保有）</td>
 </tr>
 <tr>
-<th>営業年度</th>
+<th>役員</th>
+<td>代表取締役社長　鎌形渉（株式会社エルコイン 代表取締役社長）<br>
+取締役　西山友則（株式会社アイラブ 代表取締役社長）<br>
+取締役　佐谷宣昭（パイプドＨＤ株式会社 代表取締役社長）<br>
+監査役　大屋重幸（パイプドＨＤ株式会社 取締役）</td>
+</tr>
+<tr>
+<th>事業年度</th>
 <td>3月1日から2月末日</td>
 </tr>
 <tr>
 <th>事業内容</th>
-<td></td>
+<td>下北沢エリアの電子地域通貨事業</td>
 </tr>
 </table>
 </div>
