--- a/themes/theme/layouts/index.html
+++ b/themes/theme/layouts/index.html
@@ -35,10 +35,10 @@
 </tr>
 <tr>
 <th>役員</th>
-<td>代表取締役社長　鎌形渉（株式会社エルコイン 代表取締役社長）<br>
-取締役　西山友則（株式会社アイラブ 代表取締役社長）<br>
-取締役　佐谷宣昭（パイプドＨＤ株式会社 代表取締役社長）<br>
-監査役　大屋重幸（パイプドＨＤ株式会社 取締役）</td>
+<td>代表取締役社長　鎌形渉<br>
+取締役　西山友則<br>
+取締役　佐谷宣昭<br>
+監査役　大屋重幸</td>
 </tr>
 <tr>
 <th>事業年度</th>
