--- a/themes/theme/layouts/index.html
+++ b/themes/theme/layouts/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="contentWrapper" id="company">
-<h2 class="title">株式会社シモキタコイン</h2>
+<h2 class="title"><a href="{{ .Site.BaseURL }}" target="_blank">株式会社シモキタコイン</a></h2>
 <table>
 <tr>
 <th>商号</th>
@@ -47,6 +47,10 @@
 <tr>
 <th>事業内容</th>
 <td>下北沢エリアの電子地域通貨事業</td>
+</tr>
+<tr>
+<th>方針</th>
+<td><a href="{{ .Site.BaseURL }}policy" target="_blank">反社会的勢力との関係遮断の基本方針</a></td>
 </tr>
 </table>
 </div>
