--- a/themes/theme/static/css/main.css
+++ b/themes/theme/static/css/main.css
@@ -14,7 +14,20 @@ body {
 	text-align:center;
 	line-height:1;
 	margin:78px 0;
+}
+
+.title a{
 	text-decoration: none;
+	color: #000000;
+}
+
+.title a:hover {
+	text-decoration: none;
+	color: #000000;
+}
+
+.title a:visited {
+	color: #000000;
 }
 
 .sub{
