--- a/themes/theme/static/css/main.css
+++ b/themes/theme/static/css/main.css
@@ -55,7 +55,7 @@ body {
 }
 
 #company table{
-	width:720px;
+	width:740px;
 	margin:0 auto;
 	border-top:1px solid #CCC;
 }	
@@ -70,7 +70,8 @@ body {
 }
 
 #policy {
-	width:720px;
+	width:740px;
+	margin:0 auto;
 	border-top:1px solid #CCC;
 }
 
