--- a/themes/theme/static/css/main.css
+++ b/themes/theme/static/css/main.css
@@ -87,6 +87,10 @@ body {
 		width:auto;
 		padding:1.6em 10px;
 	}	
+	#policy p{
+		width:auto;
+		padding:1.6em 10px;
+	}	
 	.contentWrapper{
 		width:auto;
 		margin:0 7px 60px;
