--- a/themes/theme/static/css/main.css
+++ b/themes/theme/static/css/main.css
@@ -77,8 +77,8 @@ body {
 
 #policy p{
 	width:680px;
-	margin:auto;
-	padding:1.2em;
+	margin:auto auto;
+	padding:1.0em;
 }
 
 @media screen and (max-width: 740px){
