--- a/themes/theme/static/css/main.css
+++ b/themes/theme/static/css/main.css
@@ -77,7 +77,7 @@ body {
 
 #policy p{
 	width:680px;
-	margin:auto auto;
+	margin:0 auto;
 	padding:1.0em;
 }
 
@@ -92,6 +92,11 @@ body {
 	#policy {
 		width:auto;
 		padding:1.6em 10px;
+	}	
+	#policy p{
+		width:680px;
+		margin:0 auto;
+		padding:1.0em;
 	}	
 	.contentWrapper{
 		width:auto;
