--- a/themes/theme/static/css/main.css
+++ b/themes/theme/static/css/main.css
@@ -92,8 +92,7 @@ body {
 		width:auto;
 	}
 	#policy p{
-		margin:0 7px 60px;
-		padding:1.0em auto;
+		padding:1.0em 10px;
 	}	
 	.contentWrapper{
 		width:auto;
