--- a/themes/theme/layouts/index.html
+++ b/themes/theme/layouts/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 <div class="contentWrapper" id="company">
-<h2 class="title"><a href="{{ .Site.BaseURL }}">株式会社シモキタコイン</a></h2>
-<table>
+<h2 class="title"><a href="{{ .Site.BaseURL }}"><img src="{{ .Site.BaseURL }}/images/skcn_logo.png" alt=""></a></h2>
+<table>a
 <tr>
 <th>商号</th>
 <td>株式会社シモキタコイン（英文社名：Shimokita Coin, Inc.）</td>
