--- a/themes/theme/layouts/index.html
+++ b/themes/theme/layouts/index.html
@@ -10,7 +10,7 @@
 <body>
 <div class="contentWrapper" id="company">
 <h2 class="title"><a href="{{ .Site.BaseURL }}"><img src="{{ .Site.BaseURL }}/images/skcn_logo.png" alt=""></a></h2>
-<table>a
+<table>
 <tr>
 <th>商号</th>
 <td>株式会社シモキタコイン（英文社名：Shimokita Coin, Inc.）</td>
