--- a/themes/theme/static/css/main.css
+++ b/themes/theme/static/css/main.css
@@ -99,6 +99,10 @@ img {
 		width:auto;
 		margin:0 30px 30px;
 	}
+	.sub{
+		width:auto;
+		margin:0 7px 60px;
+	}
 	.contentWrapper{
 		width:auto;
 		margin:0 7px 60px;
