--- a/themes/theme/layouts/index.html
+++ b/themes/theme/layouts/index.html
@@ -10,6 +10,7 @@
 <body>
 <div class="contentWrapper" id="company">
 <h2 class="title"><a href="{{ .Site.BaseURL }}"><img src="{{ .Site.BaseURL }}images/skcn_logo.png" alt=""></a></h2>
+<h2 class="sub">会社概要</h2>
 <table>
 <tr>
 <th>商号</th>
