--- a/themes/theme/layouts/index.html
+++ b/themes/theme/layouts/index.html
@@ -8,11 +8,12 @@
 <link rel="shortcut icon" href="{{ .Site.BaseURL }}/images/favicon.ico" type="image/x-icon" />
 </head>
 <body>
-<div class="contentWrapper" id="company">
+<div class="contentWrapper">
 <h2 class="title"><a href="{{ .Site.BaseURL }}"><img src="{{ .Site.BaseURL }}images/skcn_logo.png" alt=""></a></h2>
-
-<table>
+</div>
+<div id="company">
 <h2 class="sub">会社概要</h2>
+<table>
 <tr>
 <th>商号</th>
 <td>株式会社シモキタコイン（英文社名：Shimokita Coin, Inc.）</td>
