--- a/themes/theme/layouts/index.html
+++ b/themes/theme/layouts/index.html
@@ -11,7 +11,7 @@
 <div class="contentWrapper">
 <h2 class="title"><a href="{{ .Site.BaseURL }}"><img src="{{ .Site.BaseURL }}images/skcn_logo.png" alt=""></a></h2>
 </div>
-<div id="company">
+<div class="contentWrapper" id="company">
 <h2 class="sub">会社概要</h2>
 <table>
 <tr>
