--- a/themes/theme/layouts/index.html
+++ b/themes/theme/layouts/index.html
@@ -11,6 +11,13 @@
 <div class="contentWrapper">
 <h2 class="title"><a href="{{ .Site.BaseURL }}"><img src="{{ .Site.BaseURL }}images/skcn_logo.png" alt=""></a></h2>
 </div>
+<div class="contentWrapper" id="news">
+<h2 class="sub">お知らせ</h2>
+<table>
+お知らせ１<br>
+お知らせ２<br>
+</table>
+</div>
 <div class="contentWrapper" id="company">
 <h2 class="sub">会社概要</h2>
 <table>
