--- a/themes/theme/static/css/main.css
+++ b/themes/theme/static/css/main.css
@@ -59,11 +59,19 @@ img {
 	line-height:1.8;
 }
 
+#news table{
+	width:740px;
+	margin:0 auto;
+	padding:1.6em 0em;
+	border-top:1px solid #CCC;
+}
+
 #company table{
 	width:740px;
 	margin:0 auto;
+	padding:1.6em 0em;
 	border-top:1px solid #CCC;
-}	
+}
 #company table th{
 	font-weight:normal;
 	white-space:nowrap;
