--- a/themes/theme/layouts/index.html
+++ b/themes/theme/layouts/index.html
@@ -13,10 +13,8 @@
 </div>
 <div class="contentWrapper" id="news">
 <h2 class="sub">お知らせ</h2>
-<table>
-お知らせ１<br>
-お知らせ２<br>
-</table>
+<p>お知らせ１</p>
+<p>お知らせ２</p>
 </div>
 <div class="contentWrapper" id="company">
 <h2 class="sub">会社概要</h2>
