--- a/themes/theme/layouts/index.html
+++ b/themes/theme/layouts/index.html
@@ -35,11 +35,12 @@
 </tr>
 <tr>
 <th>資本金</th>
-<td>500万円（資本準備金：500万円）</td>
+<td>525万円（資本準備金：525万円）</td>
 </tr>
 <tr>
 <th>株主</th>
-<td><a href="https://lcoin.jp/" target="_blank">株式会社エルコイン</a>（100%保有）</td>
+<td><a href="https://lcoin.jp/" target="_blank">株式会社エルコイン</a>（95.2%保有）<br>
+<a href="https://love-shimokitazawa.jp/" target="_blank">株式会社アイラブ</a>（4.8%保有）</td>
 </tr>
 <tr>
 <th>役員</th>
