--- a/themes/theme/static/css/main.css
+++ b/themes/theme/static/css/main.css
@@ -39,7 +39,6 @@ img {
 	font-weight:normal;
 	font-size:120%;
 	text-align:center;
-	line-height:1;
 	margin:28px 0;
 }
 
@@ -66,10 +65,16 @@ img {
 	border-top:1px solid #CCC;
 }
 
-#company table{
+#company {
 	width:740px;
 	margin:0 auto;
 	padding:1.6em 0em;
+	border-top:1px solid #CCC;
+}
+
+#company table{
+	width:740px;
+	margin:0 auto;
 	border-top:1px solid #CCC;
 }
 #company table th{
