--- a/themes/theme/static/css/main.css
+++ b/themes/theme/static/css/main.css
@@ -63,6 +63,13 @@ img {
 	padding:1.6em 0em;
 }
 
+#news p{
+	width:740px;
+	margin:0 auto;
+	padding:1.6em 0em;
+	border-top:1px solid #CCC;
+}
+
 #company {
 	width:740px;
 	margin:0 auto;
