--- a/themes/theme/static/css/main.css
+++ b/themes/theme/static/css/main.css
@@ -95,6 +95,12 @@ img {
 	width:740px;
 	margin:0 auto;
 	padding:1.6em 0em;
+}
+
+#policy p{
+	width:740px;
+	margin:0 auto;
+	padding:1.6em 0em;
 	border-top:1px solid #CCC;
 }
 
