--- a/themes/theme/static/css/main.css
+++ b/themes/theme/static/css/main.css
@@ -76,10 +76,15 @@ img {
 	padding:1.6em 0em;
 }
 
+#company p{
+	width:740px;
+	margin:0 auto;
+	padding:0em 0em 1.6em;
+}
+
 #company table{
 	width:740px;
 	margin:0 auto;
-	padding:1.6em;
 	border-top:1px solid #CCC;
 }
 #company table th{
