--- a/themes/theme/static/css/main.css
+++ b/themes/theme/static/css/main.css
@@ -66,7 +66,7 @@ img {
 #news p{
 	width:740px;
 	margin:0 auto;
-	padding:1.6em 0em;
+	padding:1.6em;
 	border-top:1px solid #CCC;
 }
 
@@ -107,7 +107,7 @@ img {
 @media screen and (max-width: 740px){
 	#company {
 		width:auto;
-		padding:0em 10px 3.2em;
+		padding:0em 10px 2.4em;
 		margin:0 7px 60px;
 	}
 	#company table{
@@ -115,11 +115,11 @@ img {
 	}	
 	#company table th,
 	#company table td{
-		padding:1.6em 10px;
+		padding:1.2em 10px;
 	}
 	#news {
 		width:auto;
-		padding:1.6em 10px;
+		padding:1.2em 10px;
 		margin:0 7px 60px;
 	}
 	#news p{
@@ -127,7 +127,7 @@ img {
 	}
 	#policy {
 		width:auto;
-		padding:1.6em 10px;
+		padding:1.2em 10px;
 		margin:0 7px 60px;
 	}
 	#policy p{
