--- a/themes/theme/layouts/index.html
+++ b/themes/theme/layouts/index.html
@@ -14,7 +14,7 @@
 <div class="contentWrapper" id="news">
 <h2 class="sub">お知らせ</h2>
 <p>
-【2018年8月31日】 <a href="{{ .Site.BaseURL }}20180831">前払式支払手段（第三者型）発行者登録完了のお知らせ</a><br>
+【2018年8月31日】 <a href="{{ .Site.BaseURL }}20180831">第三者型前払式支払手段発行者登録完了のお知らせ</a><br>
 【2018年6月18日】 <a href="{{ .Site.BaseURL }}20180618">お詫び：「シモキタコイン」発行開始の遅延について</a><br>
 【2018年5月21日】日経MJ（6面）にシモキタコインに関する記事が掲載されました<br>
 【2018年3月26日】日本経済新聞に記事が掲載されました <a href="https://www.nikkei.com/article/DGXMZO28557570V20C18A3TJC000/" target="_blank">［パイプドＨＤ、下北沢で電子地域通貨］</a><br>
