--- a/themes/theme/layouts/index.html
+++ b/themes/theme/layouts/index.html
@@ -67,6 +67,11 @@
 <th>方針</th>
 <td><a href="{{ .Site.BaseURL }}policy">反社会的勢力との関係遮断の基本方針</a></td>
 </tr>
+<tr>
+<th>お問い合わせ</th>
+<td>03-4500-9850<br>
+info@shimokitacoin.co.jp</td>
+</tr>
 </table>
 </div>
 </body>
